Upgrade Java version from 11 to 21